--- a/vertx-testsuite/build.gradle
+++ b/vertx-testsuite/build.gradle
@@ -59,4 +59,18 @@ test {
   jvmArgs '-server', '-Xms128m', '-Xmx1024m', '-XX:MaxPermSize=128m', '-XX:NewRatio=2'
 
   testLogging { exceptionFormat "full" }
+
+}
+
+task hazelcastClusterTest(type: Test) {
+  outputs.upToDateWhen { false }
+
+  testLogging.showStandardStreams = true
+
+  systemProperty 'vertx.test.timeout', 60
+  systemProperty 'vertx.mods', "$projectDir/src/test/mod-test"
+
+  jvmArgs '-server', '-Xms128m', '-Xmx1024m', '-XX:MaxPermSize=128m', '-XX:NewRatio=2'
+
+  testLogging { exceptionFormat "full" }
 }
